[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/OPPOSans-B.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://lobby/prepare_lobby.gd" type="Script" id=2]
[ext_resource path="res://assets/tiles/forest.png" type="Texture" id=3]
[ext_resource path="res://assets/tiles/pasture.png" type="Texture" id=4]
[ext_resource path="res://assets/tiles/desert.png" type="Texture" id=5]
[ext_resource path="res://assets/tiles/field.png" type="Texture" id=6]
[ext_resource path="res://assets/tiles/hill.png" type="Texture" id=7]
[ext_resource path="res://assets/tiles/mountain.png" type="Texture" id=8]
[ext_resource path="res://assets/tiles/ocean.png" type="Texture" id=9]
[ext_resource path="res://lobby/player_item.tscn" type="PackedScene" id=10]

[sub_resource type="TileSet" id=1]
0/name = "pasture.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 154, 178 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "desert.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 154, 178 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "field.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 154, 180 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "forest.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 154, 178 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "hill.png 4"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 154, 178 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "ocean.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 154, 180 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "mountain.png 6"
6/texture = ExtResource( 8 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 154, 178 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BgPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BgMap" type="TileMap" parent="."]
position = Vector2( -15, 60 )
scale = Vector2( 0.75, 0.75 )
tile_set = SubResource( 1 )
cell_size = Vector2( 77, 135 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( 196623, 2, 0, 196625, 4, 0, 262158, 0, 0, 262160, 1, 0, 262162, 3, 0, 327695, 5, 0, 327697, 6, 0 )

[node name="OptionContainer" type="VBoxContainer" parent="."]
margin_left = 1248.0
margin_top = 168.0
margin_right = 1816.0
margin_bottom = 768.0
custom_constants/separation = 50

[node name="OptionLabel" type="Label" parent="OptionContainer"]
margin_right = 568.0
margin_bottom = 40.0
text = "参数设置"
align = 1

[node name="PlayerNumContainer" type="HBoxContainer" parent="OptionContainer"]
margin_top = 90.0
margin_right = 568.0
margin_bottom = 136.0

[node name="PlayerNumLabel" type="Label" parent="OptionContainer/PlayerNumContainer"]
margin_top = 3.0
margin_right = 188.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "玩家人数: "
align = 1

[node name="PlayerNumBtn" type="OptionButton" parent="OptionContainer/PlayerNumContainer"]
margin_left = 192.0
margin_right = 568.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "选择人数"
align = 1

[node name="FogContainer" type="HBoxContainer" parent="OptionContainer"]
margin_top = 186.0
margin_right = 568.0
margin_bottom = 234.0

[node name="FogLabel" type="Label" parent="OptionContainer/FogContainer"]
margin_top = 4.0
margin_right = 188.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "开启迷雾: "
align = 1

[node name="FogCheckBtn" type="CheckButton" parent="OptionContainer/FogContainer"]
margin_left = 192.0
margin_right = 568.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="PlayerContainer" type="VBoxContainer" parent="."]
margin_left = 144.0
margin_top = 168.0
margin_right = 480.0
margin_bottom = 768.0
custom_constants/separation = 50

[node name="PlayerListLabel" type="Label" parent="PlayerContainer"]
margin_right = 336.0
margin_bottom = 40.0
text = "未就绪玩家列表"
align = 1

[node name="Control" parent="PlayerContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 336.0
margin_bottom = 140.0

[node name="TitleLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "准备大厅"
align = 1

[node name="ExitButton" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -96.0
margin_right = -1520.0
text = "退出"

[node name="BroadcastTimer" type="Timer" parent="."]
autostart = true
__meta__ = {
"_editor_description_": "定时广播大厅信息"
}

[connection signal="item_selected" from="OptionContainer/PlayerNumContainer/PlayerNumBtn" to="." method="_on_change_num"]
[connection signal="button_down" from="ExitButton" to="." method="_on_exit_prepare"]
[connection signal="timeout" from="BroadcastTimer" to="." method="_on_broadcast"]
